# SPDX-License-Identifier: LGPL-2.1-or-later

shared_inc_path = '../../include/shared'
# shared_includes = include_directories(shared_inc_path)
shared_includes = [
  incdir,
  systemd_inc,
  shared_inc,
  basic_inc,
  fundamental_inc,
  udev_inc,
  libsystemd_includes
]

shared_sources = files(
        'acl-util.c',
        join_paths(shared_inc_path, 'acl-util.h'),
        'acpi-fpdt.c',
        join_paths(shared_inc_path, 'acpi-fpdt.h'),
        'apparmor-util.c',
        join_paths(shared_inc_path, 'apparmor-util.h'),
        'ask-password-api.c',
        join_paths(shared_inc_path, 'ask-password-api.h'),
        'barrier.c',
        join_paths(shared_inc_path, 'barrier.h'),
        'base-filesystem.c',
        join_paths(shared_inc_path, 'base-filesystem.h'),
        'binfmt-util.c',
        join_paths(shared_inc_path, 'binfmt-util.h'),
        'bitmap.c',
        join_paths(shared_inc_path, 'bitmap.h'),
        join_paths(shared_inc_path, 'blkid-util.h'),
        'blockdev-util.c',
        join_paths(shared_inc_path, 'blockdev-util.h'),
        'bond-util.c',
        join_paths(shared_inc_path, 'bond-util.h'),
        'boot-timestamps.c',
        join_paths(shared_inc_path, 'boot-timestamps.h'),
        'bootspec.c',
        join_paths(shared_inc_path, 'bootspec.h'),
        'bpf-dlopen.c',
        join_paths(shared_inc_path, 'bpf-dlopen.h'),
        'bpf-program.c',
        join_paths(shared_inc_path, 'bpf-program.h'),
        'bridge-util.c',
        join_paths(shared_inc_path, 'bridge-util.h'),
        'btrfs-util.c',
        join_paths(shared_inc_path, 'btrfs-util.h'),
        'bus-get-properties.c',
        join_paths(shared_inc_path, 'bus-get-properties.h'),
        'bus-locator.c',
        join_paths(shared_inc_path, 'bus-locator.h'),
        'bus-log-control-api.c',
        join_paths(shared_inc_path, 'bus-log-control-api.h'),
        'bus-map-properties.c',
        join_paths(shared_inc_path, 'bus-map-properties.h'),
        'bus-message-util.c',
        join_paths(shared_inc_path, 'bus-message-util.h'),
        'bus-object.c',
        join_paths(shared_inc_path, 'bus-object.h'),
        'bus-polkit.c',
        join_paths(shared_inc_path, 'bus-polkit.h'),
        'bus-print-properties.c',
        join_paths(shared_inc_path, 'bus-print-properties.h'),
        'bus-unit-procs.c',
        join_paths(shared_inc_path, 'bus-unit-procs.h'),
        'bus-unit-util.c',
        join_paths(shared_inc_path, 'bus-unit-util.h'),
        'bus-util.c',
        join_paths(shared_inc_path, 'bus-util.h'),
        'bus-wait-for-jobs.c',
        join_paths(shared_inc_path, 'bus-wait-for-jobs.h'),
        'bus-wait-for-units.c',
        join_paths(shared_inc_path, 'bus-wait-for-units.h'),
        'calendarspec.c',
        join_paths(shared_inc_path, 'calendarspec.h'),
        'cgroup-setup.c',
        join_paths(shared_inc_path, 'cgroup-setup.h'),
        'cgroup-show.c',
        join_paths(shared_inc_path, 'cgroup-show.h'),
        'chown-recursive.c',
        join_paths(shared_inc_path, 'chown-recursive.h'),
        'clean-ipc.c',
        join_paths(shared_inc_path, 'clean-ipc.h'),
        'clock-util.c',
        join_paths(shared_inc_path, 'clock-util.h'),
        'compare-operator.c',
        join_paths(shared_inc_path, 'compare-operator.h'),
        'condition.c',
        join_paths(shared_inc_path, 'condition.h'),
        'conf-parser.c',
        join_paths(shared_inc_path, 'conf-parser.h'),
        'copy.c',
        join_paths(shared_inc_path, 'copy.h'),
        'coredump-util.c',
        join_paths(shared_inc_path, 'coredump-util.h'),
        'cpu-set-util.c',
        join_paths(shared_inc_path, 'cpu-set-util.h'),
        'creds-util.c',
        join_paths(shared_inc_path, 'creds-util.h'),
        'cryptsetup-util.c',
        join_paths(shared_inc_path, 'cryptsetup-util.h'),
        'daemon-util.c',
        join_paths(shared_inc_path, 'daemon-util.h'),
        'data-fd-util.c',
        join_paths(shared_inc_path, 'data-fd-util.h'),
        'dev-setup.c',
        join_paths(shared_inc_path, 'dev-setup.h'),
        'device-nodes.c',
        join_paths(shared_inc_path, 'device-nodes.h'),
        join_paths(shared_inc_path, 'devnode-acl.h'),
        'discover-image.c',
        join_paths(shared_inc_path, 'discover-image.h'),
        'dissect-image.c',
        join_paths(shared_inc_path, 'dissect-image.h'),
        'dlfcn-util.c',
        join_paths(shared_inc_path, 'dlfcn-util.h'),
        'dm-util.c',
        join_paths(shared_inc_path, 'dm-util.h'),
        'dns-domain.c',
        join_paths(shared_inc_path, 'dns-domain.h'),
        'dropin.c',
        join_paths(shared_inc_path, 'dropin.h'),
        'efi-api.c',
        join_paths(shared_inc_path, 'efi-api.h'),
        'efi-loader.c',
        join_paths(shared_inc_path, 'efi-loader.h'),
        'elf-util.c',
        join_paths(shared_inc_path, 'elf-util.h'),
        'enable-mempool.c',
        'env-file-label.c',
        join_paths(shared_inc_path, 'env-file-label.h'),
        # 'ethtool-util.c',
        # join_paths(shared_inc_path, 'ethtool-util.h'),
        'exec-util.c',
        join_paths(shared_inc_path, 'exec-util.h'),
        'exit-status.c',
        join_paths(shared_inc_path, 'exit-status.h'),
        'extension-release.c',
        join_paths(shared_inc_path, 'extension-release.h'),
        join_paths(shared_inc_path, 'fdisk-util.h'),
        'fdset.c',
        join_paths(shared_inc_path, 'fdset.h'),
        'fileio-label.c',
        join_paths(shared_inc_path, 'fileio-label.h'),
        'find-esp.c',
        join_paths(shared_inc_path, 'find-esp.h'),
        'firewall-util-nft.c',
        join_paths(shared_inc_path, 'firewall-util-private.h'),
        'firewall-util.c',
        join_paths(shared_inc_path, 'firewall-util.h'),
        'format-table.c',
        join_paths(shared_inc_path, 'format-table.h'),
        join_paths(shared_inc_path, 'fsck-util.h'),
        'fstab-util.c',
        join_paths(shared_inc_path, 'fstab-util.h'),
        'generator.c',
        join_paths(shared_inc_path, 'generator.h'),
        'geneve-util.c',
        join_paths(shared_inc_path, 'geneve-util.h'),
        'gpt.c',
        join_paths(shared_inc_path, 'gpt.h'),
        'group-record.c',
        join_paths(shared_inc_path, 'group-record.h'),
        'hostname-setup.c',
        join_paths(shared_inc_path, 'hostname-setup.h'),
        'hwdb-util.c',
        join_paths(shared_inc_path, 'hwdb-util.h'),
        'id128-print.c',
        join_paths(shared_inc_path, 'id128-print.h'),
        'idn-util.c',
        join_paths(shared_inc_path, 'idn-util.h'),
        'ima-util.c',
        join_paths(shared_inc_path, 'ima-util.h'),
        'import-util.c',
        join_paths(shared_inc_path, 'import-util.h'),
        'in-addr-prefix-util.c',
        join_paths(shared_inc_path, 'in-addr-prefix-util.h'),
        join_paths(shared_inc_path, 'initreq.h'),
        'install-file.c',
        join_paths(shared_inc_path, 'install-file.h'),
        'install-printf.c',
        join_paths(shared_inc_path, 'install-printf.h'),
        'install.c',
        join_paths(shared_inc_path, 'install.h'),
        'ip-protocol-list.c',
        join_paths(shared_inc_path, 'ip-protocol-list.h'),
        'ipvlan-util.c',
        join_paths(shared_inc_path, 'ipvlan-util.h'),
        'journal-importer.c',
        join_paths(shared_inc_path, 'journal-importer.h'),
        'journal-util.c',
        join_paths(shared_inc_path, 'journal-util.h'),
        join_paths(shared_inc_path, 'json-internal.h'),
        'json.c',
        join_paths(shared_inc_path, 'json.h'),
        'kbd-util.c',
        join_paths(shared_inc_path, 'kbd-util.h'),
        'keyring-util.c',
        join_paths(shared_inc_path, 'keyring-util.h'),
        'killall.c',
        join_paths(shared_inc_path, 'killall.h'),
        'label.c',
        join_paths(shared_inc_path, 'label.h'),
        'libcrypt-util.c',
        join_paths(shared_inc_path, 'libcrypt-util.h'),
        'libfido2-util.c',
        join_paths(shared_inc_path, 'libfido2-util.h'),
        join_paths(shared_inc_path, 'libmount-util.h'),
        join_paths(meson.project_source_root(), 'include', 'linux/auto_dev-ioctl.h'),
        join_paths(meson.project_source_root(), 'include', 'linux/bpf.h'),
        join_paths(meson.project_source_root(), 'include', 'linux/bpf_common.h'),
        join_paths(meson.project_source_root(), 'include', 'linux/bpf_insn.h'),
        join_paths(meson.project_source_root(), 'include', 'linux/dm-ioctl.h'),
        join_paths(meson.project_source_root(), 'include', 'linux/ethtool.h'),
        'local-addresses.c',
        join_paths(shared_inc_path, 'local-addresses.h'),
        'locale-setup.c',
        join_paths(shared_inc_path, 'locale-setup.h'),
        'lockfile-util.c',
        join_paths(shared_inc_path, 'lockfile-util.h'),
        join_paths(shared_inc_path, 'log-link.h'),
        'logs-show.c',
        join_paths(shared_inc_path, 'logs-show.h'),
        'loop-util.c',
        join_paths(shared_inc_path, 'loop-util.h'),
        'loopback-setup.c',
        join_paths(shared_inc_path, 'loopback-setup.h'),
        'machine-id-setup.c',
        join_paths(shared_inc_path, 'machine-id-setup.h'),
        'machine-pool.c',
        join_paths(shared_inc_path, 'machine-pool.h'),
        'macvlan-util.c',
        join_paths(shared_inc_path, 'macvlan-util.h'),
        join_paths(shared_inc_path, 'main-func.h'),
        'mkdir-label.c',
        join_paths(shared_inc_path, 'mkdir-label.h'),
        'mkfs-util.c',
        join_paths(shared_inc_path, 'mkfs-util.h'),
        join_paths(shared_inc_path, 'module-util.h'),
        'mount-setup.c',
        join_paths(shared_inc_path, 'mount-setup.h'),
        'mount-util.c',
        join_paths(shared_inc_path, 'mount-util.h'),
        'net-condition.c',
        join_paths(shared_inc_path, 'net-condition.h'),
        'netif-naming-scheme.c',
        join_paths(shared_inc_path, 'netif-naming-scheme.h'),
        'netif-sriov.c',
        join_paths(shared_inc_path, 'netif-sriov.h'),
        'netif-util.c',
        join_paths(shared_inc_path, 'netif-util.h'),
        join_paths(shared_inc_path, 'nscd-flush.h'),
        'nsflags.c',
        join_paths(shared_inc_path, 'nsflags.h'),
        'numa-util.c',
        join_paths(shared_inc_path, 'numa-util.h'),
        'openssl-util.c',
        join_paths(shared_inc_path, 'openssl-util.h'),
        'output-mode.c',
        join_paths(shared_inc_path, 'output-mode.h'),
        'pager.c',
        join_paths(shared_inc_path, 'pager.h'),
        'parse-argument.c',
        join_paths(shared_inc_path, 'parse-argument.h'),
        'parse-helpers.c',
        join_paths(shared_inc_path, 'parse-helpers.h'),
        'pcre2-util.c',
        join_paths(shared_inc_path, 'pcre2-util.h'),
        join_paths(shared_inc_path, 'pe-header.h'),
        'pkcs11-util.c',
        join_paths(shared_inc_path, 'pkcs11-util.h'),
        'pretty-print.c',
        join_paths(shared_inc_path, 'pretty-print.h'),
        'psi-util.c',
        join_paths(shared_inc_path, 'psi-util.h'),
        'ptyfwd.c',
        join_paths(shared_inc_path, 'ptyfwd.h'),
        'pwquality-util.c',
        join_paths(shared_inc_path, 'pwquality-util.h'),
        'qrcode-util.c',
        join_paths(shared_inc_path, 'qrcode-util.h'),
        'quota-util.c',
        join_paths(shared_inc_path, 'quota-util.h'),
        'reboot-util.c',
        join_paths(shared_inc_path, 'reboot-util.h'),
        'recovery-key.c',
        join_paths(shared_inc_path, 'recovery-key.h'),
        'resize-fs.c',
        join_paths(shared_inc_path, 'resize-fs.h'),
        'resolve-util.c',
        join_paths(shared_inc_path, 'resolve-util.h'),
        'rm-rf.c',
        join_paths(shared_inc_path, 'rm-rf.h'),
        join_paths(shared_inc_path, 'seccomp-util.h'),
        # Mac does not support securebits
        # 'securebits-util.c',
        # join_paths(shared_inc_path, 'securebits-util.h'),
        # 'selinux-util.c',
        # join_paths(shared_inc_path, 'selinux-util.h'),
        'serialize.c',
        join_paths(shared_inc_path, 'serialize.h'),
        'service-util.c',
        join_paths(shared_inc_path, 'service-util.h'),
        'sleep-config.c',
        join_paths(shared_inc_path, 'sleep-config.h'),
        'smack-util.c',
        join_paths(shared_inc_path, 'smack-util.h'),
        'socket-label.c',
        'socket-netlink.c',
        join_paths(shared_inc_path, 'socket-netlink.h'),
        'spawn-ask-password-agent.c',
        join_paths(shared_inc_path, 'spawn-ask-password-agent.h'),
        'spawn-polkit-agent.c',
        join_paths(shared_inc_path, 'spawn-polkit-agent.h'),
        'specifier.c',
        join_paths(shared_inc_path, 'specifier.h'),
        'switch-root.c',
        join_paths(shared_inc_path, 'switch-root.h'),
        'tmpfile-util-label.c',
        join_paths(shared_inc_path, 'tmpfile-util-label.h'),
        'tomoyo-util.c',
        join_paths(shared_inc_path, 'tomoyo-util.h'),
        'tpm2-util.c',
        join_paths(shared_inc_path, 'tpm2-util.h'),
        'udev-util.c',
        join_paths(shared_inc_path, 'udev-util.h'),
        'uid-alloc-range.c',
        join_paths(shared_inc_path, 'uid-alloc-range.h'),
        'user-record-nss.c',
        join_paths(shared_inc_path, 'user-record-nss.h'),
        'user-record-show.c',
        join_paths(shared_inc_path, 'user-record-show.h'),
        'user-record.c',
        join_paths(shared_inc_path, 'user-record.h'),
        'userdb-dropin.c',
        join_paths(shared_inc_path, 'userdb-dropin.h'),
        'userdb.c',
        join_paths(shared_inc_path, 'userdb.h'),
        # join_paths(shared_inc_path, 'utmp-wtmp.h'),
        'varlink.c',
        join_paths(shared_inc_path, 'varlink.h'),
        join_paths(shared_inc_path, 'varlink-internal.h'),
        'verb-log-control.c',
        join_paths(shared_inc_path, 'verb-log-control.h'),
        'verbs.c',
        join_paths(shared_inc_path, 'verbs.h'),
        'vlan-util.c',
        join_paths(shared_inc_path, 'vlan-util.h'),
        'volatile-util.c',
        join_paths(shared_inc_path, 'volatile-util.h'),
        'watchdog.c',
        join_paths(shared_inc_path, 'watchdog.h'),
        'web-util.c',
        join_paths(shared_inc_path, 'web-util.h'),
        'wifi-util.c',
        join_paths(shared_inc_path, 'wifi-util.h'),
        'xml.c',
        join_paths(shared_inc_path, 'xml.h'),
)

if get_option('tests') != 'false'
        shared_sources += files(
                join_paths(shared_inc_path, 'test-tables.h'),
                'tests.c',
                join_paths(shared_inc_path, 'tests.h'),
        )
endif

generate_syscall_list = find_program('generate-syscall-list.py')
fname = 'syscall-list.h'
syscall_list_h = custom_target(
        fname,
        input : syscall_list_txt,
        output : fname,
        command : [generate_syscall_list,
                   '@INPUT@'],
        capture : true)

if conf.get('HAVE_ACL') == 1
        shared_sources += files(
                'devnode-acl.c',
        )
endif

# if conf.get('ENABLE_UTMP') == 1
#        shared_sources += files('utmp-wtmp.c')
# endif

if conf.get('HAVE_SECCOMP') == 1
        shared_sources += files('seccomp-util.c')
        shared_sources += syscall_list_h
endif

if conf.get('HAVE_LIBIPTC') == 1
        shared_sources += files('firewall-util-iptables.c')
endif

if conf.get('HAVE_LIBBPF') == 1
        shared_sources += files(
                'bpf-link.c',
                join_paths(shared_inc_path, 'bpf-link.h'),
        )
endif

if conf.get('HAVE_KMOD') == 1
        shared_sources += files('module-util.c')
endif

if conf.get('HAVE_PAM') == 1
        shared_sources += files(
                'pam-util.c',
                join_paths(shared_inc_path, 'pam-util.h'),
        )
endif

if conf.get('ENABLE_NSCD') == 1
        shared_sources += files('nscd-flush.c')
endif

generate_ip_protocol_list = find_program('generate-ip-protocol-list.sh')
ip_protocol_list_txt = custom_target(
        'ip-protocol-list.txt',
        output : 'ip-protocol-list.txt',
        command : [generate_ip_protocol_list, cpp],
        capture : true)

fname = 'ip-protocol-from-name.gperf'
gperf_file = custom_target(
        fname,
        input : ip_protocol_list_txt,
        output : fname,
        command : [generate_gperfs, 'ip_protocol', 'IPPROTO_', '@INPUT@'],
        capture : true)

fname = 'ip-protocol-from-name.h'
target1 = custom_target(
        fname,
        input : gperf_file,
        output : fname,
        command : [gperf,
                   '-L', 'ANSI-C', '-t', '--ignore-case',
                   '-N', 'lookup_ip_protocol',
                   '-H', 'hash_ip_protocol_name',
                   '-p', '-C',
                   '@INPUT@'],
        capture : true)

fname = 'ip-protocol-to-name.h'
awkscript = 'ip-protocol-to-name.awk'
target2 = custom_target(
        fname,
        input : [awkscript, ip_protocol_list_txt],
        output : fname,
        command : [awk, '-f', '@INPUT0@', '@INPUT1@'],
        capture : true)

shared_generated_gperf_headers = [target1, target2]
shared_sources += shared_generated_gperf_headers

libshared_name = 'systemd-shared-@0@'.format(shared_lib_tag)

libshared_deps = [threads,
                  libacl,
                  libblkid,
                #   libcap,
                  libcrypt,
                #   libdl,
                  libgcrypt,
                  libiptc,
                  libkmod,
                  liblz4,
                #   libmount,
                  libopenssl,
                #   libp11kit,
                  libpam,
                #   librt,
                #   libseccomp,
                #   libselinux,
                  libzstd,
                  libxz]

libshared_sym_path = '@0@/libshared.sym'.format(meson.current_source_dir())

libshared_static = static_library(
        libshared_name,
        shared_sources,
        include_directories : shared_includes,
        dependencies : libshared_deps,
        c_args : ['-fvisibility=default'],
        build_by_default : false)

libshared = shared_library(
    libshared_name,
    include_directories : shared_includes,
    c_args : ['-fvisibility=default'],
    link_args : ['-Wl,-exported_symbols_list,' + libsystemd_sym_path],
    link_whole : [libshared_static,
                  libbasic,
                  libbasic_gcrypt,
                  libsystemd_static],
    dependencies : libshared_deps,
    install : true,
    install_dir : rootpkglibdir)